--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -8,6 +8,9 @@ body {
 
 .footer {
     background: black;
+    position: relative;
+    z-index: 2;
+    overflow: hidden;
     color: #ffffff;
     padding: 25px 0;
     text-align: left;
@@ -81,6 +84,7 @@ body {
 
 .footer-contact {
     margin-bottom: 10px;
+    font-family: sans-serif;
     font-size: 1.2em;
     display: flex;
     align-items: center;
@@ -98,6 +102,8 @@ body {
 
 .footer-copy {
     background: rgb(15, 16, 18);
+    position: relative;
+    z-index: 2;
     color: #ffffff;
     text-align: center;
     padding: 20px 0;
