--- a/src/Components/Home/FacultyAdvisors/FacultyAdvisors.css
+++ b/src/Components/Home/FacultyAdvisors/FacultyAdvisors.css
@@ -76,12 +76,17 @@
 }
 
 .section-heading {
+  font-size: 4rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    background: linear-gradient(to bottom, rgb(255, 0, 0), rgb(136, 8, 8));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    line-height: 1.2;
   text-align: center;
-  color: #ff4c4c;
   margin-bottom: 1rem;
-  font-size: 2.5em;
-  font-weight: bold;
-  text-transform: uppercase;
   font-family: 'Arial', sans-serif;
   position: relative;
   animation: fadeIn 1s ease-in-out, headingAnimation 1s ease forwards;
