--- a/src/Components/Team/Teams.css
+++ b/src/Components/Team/Teams.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:700|Oswald:700&display=swap');
+
 body {
     background-color: rgb(21, 23, 26);
     font-family: 'Roboto', sans-serif;
@@ -20,8 +22,18 @@ body {
 }
 
 .sub-heading {
-    font-size: 2rem;
+    font-family: 'Montserrat','Roboto' ,sans-serif;
+    font-size: 4rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    background: linear-gradient(to bottom, rgb(255, 46, 46), rgb(114, 5, 5));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    line-height: 1.2;
     margin-bottom: 1rem;
+
     color: rgb(202, 52, 53);
     animation: fadeIn 2s ease-in-out;
 }
@@ -52,7 +64,7 @@ body {
     overflow: hidden;
     position: relative;
     box-shadow: 0 4px 10px rgba(250, 0, 0, 0.4);
-    transition: transform 1.2s ease-in-out, box-shadow 1.2s ease-in-out;
+    transition: transform 0.8s ease-in-out, box-shadow 0.8s ease-in-out;
     width: 100%;
     max-width: 240px;
     height: 240px;
@@ -64,7 +76,7 @@ body {
 
 .card:hover {
     transform: scale(1.05) rotateX(4deg) translateY(-7px);
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.7);
+    box-shadow: 1px 1px 10px 0 rgba(250, 0, 0, 0.4);
 }
 
 .card-image {
@@ -81,15 +93,45 @@ body {
     flex-grow: 0;
 }
 
+.card-text {
+    position: absolute;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 50% 4%;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 5px;
+    text-align: left;
+    transition: transform 0.4s ease-in-out color 0.4s ease-in-out;
+    top: 10rem;
+}
+
 .card-name {
     font-size: 1rem;
+    font-family: 'Montserrat','Roboto', sans-serif;
+    font-weight: 900;
     margin-bottom: 0.5rem;
+    transform: translateY(-100px);
+    position: relative;
     color: rgb(202, 52, 53);
 }
 
+.card:hover .card-name::after {
+    content: "";
+    display: block;
+    width: 50%;
+    margin: 3px 3px;
+    border-bottom: 1.8px groove rgb(202, 52, 53);
+    animation: underline 0.6s ease-in-out forwards;
+}
 .card-designation {
+    font-family: 'Montserrat', sans-serif;
     font-size: 0.875rem;
     color: rgb(202, 52, 53);
+    display: block;
+    transform: translateY(-110px);
+    margin: 5px 0;
 }
 
 .card-overlay {
@@ -106,7 +148,7 @@ body {
     flex-direction: column;
     padding: 1.5rem;
     transition: opacity 0.5s ease-in-out;
-    text-align: center;
+    /*text-align: center;*/
 }
 
 .card:hover .card-overlay {
@@ -115,20 +157,38 @@ body {
 
 .social-icons {
     display: flex;
-    justify-content: center;
-    gap: 1.5rem;
-    margin-top: 1rem;
+    position: absolute;
+    flex-direction: column;
+    right: 1rem;
+    top: 0.6rem;
 }
 
 .social-icon {
     color: rgb(202, 52, 53);
     font-size: 1.5rem;
+    transform: translateY(30px);
     transition: transform 0.4s ease-in-out, color 0.4s ease-in-out;
 }
 
 .social-icon:hover {
     transform: scale(1.2);
     color: white;
+}
+
+.card-text .social-icon {
+    margin: 20px 0;
+    padding: 0;
+    opacity: 0;
+}
+
+.card:hover .social-icon {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.card:hover .card-name  .social-icon {
+    transform: translateY(0);
+    opacity: 1;
 }
 
 @keyframes fadeIn {
