--- a/src/Components/Alumni/cardalumni.css
+++ b/src/Components/Alumni/cardalumni.css
@@ -1,167 +1,262 @@
 .card-alumni{
-  position: relative;
   width: 20vw;
   height: 50vh;
+  display: flex;
+  flex-direction: column;
   border-radius: 2vw;
   overflow: hidden;
-  background: #000;
-  transform-style: preserve-3d;
-  transition: 
-    transform 0.6s cubic-bezier(.22,.61,.36,1),
-    box-shadow 0.6s cubic-bezier(.22,.61,.36,1);
+  row-gap: 30vh;
+  align-self: normal;
+  z-index: 2;
+  filter: brightness(0.8);
+
 }
 .card-alumni img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transform: translateZ(0);
-  transition: 
-    transform 0.8s cubic-bezier(.22,.61,.36,1),
-    filter 0.8s cubic-bezier(.22,.61,.36,1);
-}
-.card-alumni::before{
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: radial-gradient(
-    circle at 50% 120%,
-    rgba(0,0,0,0.85),
-    rgba(0,0,0,0.4),
-    transparent
-  );
-  opacity: 0.7;
-  z-index: 1;
-  transition: opacity 0.6s ease;
-}
-.card-alumni::after{
-  content: "";
-  position: absolute;
-  inset: -150%;
-  background: linear-gradient(
-    rgba(255, 255, 255, 0.527),
-    transparent 100%
-  );
-  transform: translateX(-100%);
-  transition: transform 3s ease;
-  z-index: 2;
+position: absolute;
+top: 0;
+width: 100%;
+height: 100%;
 }
 .card-alumni:hover{
-  transform:
-    translateY(-14px)
-    scale(1.04)
-    perspective(1200px)
-    rotateX(6deg)
-    rotateY(-6deg);
-  box-shadow:
-    0 30px 60px rgba(0,0,0,0.6),
-    0 0 0 5px rgba(249, 29, 29, 0.712);
+  transform: scale(1.05);
+  transition: transform 0.5s ease-in-out;
+  filter: brightness(1);
+  animation: rot 1s linear;
+  box-shadow: 5px 5px 20px rgb(255, 0, 0),
+  -5px -5px 20px black;
 }
-
-.card-alumni:hover img{
-  transform: scale(1.12);
-  filter: brightness(1.08) contrast(1.08);
+@keyframes rot{
+  0%, 100%{
+    box-shadow: 5px 5px 20px rgb(165, 4, 4),
+                -5px -5px 20px black;
+  }
+  20%{
+    box-shadow: -5px 5px 20px rgb(165, 4, 4),
+                  5px -5px 20px black;
+  }
+  50%{
+    box-shadow: -5px -5px 20px rgb(165, 4, 4),
+                  5px 5px 20px black;
+  }
+  80%{
+    box-shadow: 5px -5px 20px rgb(165, 4, 4),
+                  -5px 5px 20px black;
+  }
 }
-
-.card-alumni:hover::before{
-  opacity: 0.9;
-}
-
-.card-alumni:hover::after{
-  transform: translateX(100%);
-}
-
-.card-alumni h2{
+.bottom-Alumni{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  /* column-gap: 7vw; */
+  height: 25%;
   position: absolute;
-  bottom: 85px;
-  left: 24px;
-  right: 24px;
+  bottom: 0;
+}
+.items-Alumni{
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.2vh;
+}
+.card-alumni h2{
+  z-index: 2;
+  display: flex;
   color: white;
   font-family: "Poppins", sans-serif;
-  font-style: bold;
-  font-size: 1.35rem;
-  z-index: 3;
-  opacity: 0;
-  transform: translateY(30px) translateZ(30px);
-  transition: all 0.5s ease;
-}
+  margin-left: 8vw;
+  margin-top: 26vh;
+  text-wrap: wrap;
+  transform: scale(0);
+  font-size: 1.3em;
 
+}
 .card-alumni:hover h2{
-  opacity: 1;
-  transform: translateY(0) translateZ(30px);
-  color: rgb(228, 29, 29);
-}
-
-.bottom-Alumni{
-  position: absolute;
-  bottom: 20px;
-  left: 24px;
-  z-index: 3;
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
 }
 
 .icons-Alumni{
   display: flex;
-  gap: 24px;
+  justify-content: space-evenly;
+  font-size: 2em;
+  color: black;
+  background:transparent;
+  z-index: 2;
+  column-gap: 4vw;
+  margin-bottom: 3vh;
+  margin-left: 2vw;
+}
+@media screen and (max-width: 945px){
+  .card-alumni h2{
+    margin-left: 12vw;
+    margin-top: 18vh;
+  }
+  .icons-Alumni{
+    column-gap: 5vw;
+  }
+}
+.delay1{
+  transform: scale(0);
+  transition: transform 0.5s ease;
+  transition-delay: 0.3s;
+  
+}
+.delay1:hover{
+  cursor: pointer;
+}
+.delay2:hover{
+  cursor: pointer;
+}
+.delay3:hover{
+  cursor: pointer;
+}
+.delay2{
+  transform: scale(0);
+  transition: transform 0.5s ease;
+  transition-delay: 0.2s;
+}
+.delay3{
+  transform: scale(0);
+  transition: transform 0.5s ease;
+  transition-delay: 0.1s;
 }
 
-.icons-Alumni a{
-  font-size: 1.8rem;
-  color: red;
-  opacity: 0;
-  transform:
-    translateY(20px)
-    scale(0.8);
-  transition:
-    transform 0.45s ease,
-    opacity 0.45s ease,
-    color 0.3s ease;
+.card-alumni:hover .delay1{
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
+  transition-delay: 0.3s;
+}
+.card-alumni:hover .delay2{
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
+  transition-delay: 0.2s;
+
+}
+.card-alumni:hover .delay3{
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
 }
 
-.card-alumni:hover .icons-Alumni a{
-  opacity: 1;
-  transform: translateY(0) scale(1);
+@keyframes animates{
+  0%{
+    height: 0;
+  }
+  100%{
+    height: 20%;
+  }
 }
-
-.icons-Alumni a:nth-child(1){
-  transition-delay: 0.15s;
-}
-.icons-Alumni a:nth-child(2){
-  transition-delay: 0.25s;
-}
-
-.icons-Alumni a:hover{
-  color: #DA4D1D;
-  transform: scale(1.25);
-}
-
 #alumni-button{
-  display: none;
+  height: 30px;
+  background-color: #DA4D1D;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  outline:none;
+  transition: all 0.5s ease;
+  width: 30px;
+  display: flex;
+  opacity: 70%;
+  /* mix-blend-mode: hard-light; */
+
 }
 
-@media (max-width: 1200px){
-  .card-alumni{
-    width: 35vw;
-    height: 35vw;
-  }
+.card-alumni:hover button{
+  transform: scale(20.5);
+  mix-blend-mode: hard-light;
 }
 
-@media (max-width: 700px){
-  .card-alumni{
-    width: 65vw;
-    height: 38vh;
-  }
-
-  .card-alumni:hover{
-    transform: translateY(-8px) scale(1.02);
-  }
+@media screen and (max-width: 1199px){
 
   .card-alumni h2{
-    font-size: 1.05rem;
+    /* margin-left: 15vw; */
+    margin-top: 12vh;
+    font-size: 0.8em;
+    }
+  .card-alumni{
+    height: 35vw;
+    width: 35vw;
+  }
+  .icons-Alumni{
+    font-size: 1.5rem;
+  }
+
+  .card-alumni:hover button{
+    transform: scale(16.5);
+  }
+  
+}
+@media screen and (max-width: 1199px) and (max-height: 1300px){
+  .card-alumni{
+    height: 30vw;
+    width: 25vw;
   }
 }
-
-@media (max-width: 400px){
+@media screen and (min-width: 1200px) and (max-width:1600px){
   .card-alumni{
-    width: 80vw;
-    height: 40vh;
+    width: 20vw;
+    height: 20vw;
   }
+  .card-alumni h2{
+    margin-left: 10vw;
+    margin-top: 13vh;
+  }
+}
+@media screen and (max-width: 700px){
+  .card-alumni{
+    width: 40vw;
+  }
+  .card-alumni:hover button{
+    transform: scale(17);
+  }
+
+}
+@media screen and (max-height: 1024px) and (max-width: 700px){
+  .card-alumni {
+    height: 25vh;
+  }
+
+}
+@media screen and (max-width: 600px){
+  .card-alumni{
+    width: 60vw;
+    height: 30vh;
+  }
+  .card-alumni:hover button{
+    transform: scale(16);
+  }
+@media screen and (max-width: 600px) and (max-height: 800px){
+  .card-alumni{
+    height: 50vh;
+  }
+  }
+
+}
+@media screen and (min-width: 2000px){
+  .icons-Alumni{
+   font-size: 2.5rem;
+ 
+  }
+  .card-alumni h2{
+     margin-left: 9vw;
+     margin-top: 31vh;
+     font-size: 2.3rem;
+  }
+ }
+
+@media screen and (max-width: 400px){
+  .card-alumni{
+    width: 60vw;
+    height: 35vh;
+  }
+  .card-alumni:hover button{
+    transform: scale(14);
+  }
+
+}
+@media screen and (max-width: 400px) and (min-height: 800px){
+  .card-alumni{
+    width: 65vw;
+    height: 30vh;
+  }
+
 }
