--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-
-
-
-
 .App {
   display: flex;
   flex-direction: column;
@@ -14,40 +10,38 @@
   width: 100%;
 }
 
-
 .pt-12 {
-  padding-top: 3rem; 
+  padding-top: 3rem;
 }
 
-
-nav, footer {
+nav,
+footer {
   width: 100%;
-
 }
 
 nav {
-  background-color: #333; 
-  color: #fff; 
+  background-color: #333;
+  color: #fff;
 }
 
 footer {
-  background-color: #f1f1f1; 
+  background-color: #f1f1f1;
   color: #333;
-  padding: 1rem 0; 
+  padding: 1rem 0;
   text-align: center;
 }
 
-
 @media (max-width: 768px) {
   .pt-12 {
-    padding-top: 2rem; 
+    padding-top: 2rem;
   }
 }
 
- html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: auto;
-  overflow-x: hidden; 
+  overflow-x: hidden;
 }
