--- a/src/Components/Alumni/Alumni.css
+++ b/src/Components/Alumni/Alumni.css
@@ -1,80 +1,86 @@
-.container-alumni{
+.container-alumni {
   display: flex;
   flex-direction: column;
   height: 100%;
   width: 100%;
   align-items: center;
-  background:rgb(21,23,26);
+  background: rgb(21, 23, 26);
   padding-top: 2vh;
   justify-content: center;
   row-gap: 5vh;
   top: 11vh;
 
-  h1{
-      font-family: "Poppins", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      color: white;
-      z-index: 2;
-      font-size: 2em;
-    }
-  span{
-    color: rgb(255,0,0);
+  h1 {
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background: linear-gradient(90deg, #ff0000, #ff4d4d, #ffffff, #ff0000);
+    font-family: "Poppins", sans-serif;
+    background-size: 300%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
+    z-index: 2;
+    font-size: 2em;
+    animation: shine 5s linear infinite;
+    text-shadow: 0 0 30px rgba(255, 0, 0, 0.3);
+  }
+  span {
+    color: rgb(255, 0, 0);
   }
 }
-.content-alumni{
+.content-alumni {
   color: white;
   z-index: 1;
   width: 80vw;
   padding: 2px;
   font-family: "Poppins", sans-serif;
   padding: 20px;
-
 }
-#alumni-content{
+#alumni-content {
   text-wrap: wrap;
   position: relative;
   animation: animate 1s linear;
   font-size: 1.2em;
 }
-@media screen and (min-width: 1700px){
-  #alumni-content{
+@media screen and (min-width: 1700px) {
+  #alumni-content {
     font-size: 2.5rem;
     line-height: 1.2;
   }
-  .container-alumni h1{
+  .container-alumni h1 {
     font-size: 3rem;
   }
 }
-@keyframes animate{
-  0%{
-    left:-10vw;
+@keyframes animate {
+  0% {
+    left: -10vw;
     opacity: 0%;
   }
-  100%{
-    left:0vw;
+  100% {
+    left: 0vw;
     opacity: 100%;
   }
 }
 
-.cards-Alumni{
+.cards-Alumni {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   column-gap: 2vw;
   row-gap: 8vh;
   width: 80vw;
-  
 }
 
-.cards-Alumni:last-child{
+.cards-Alumni:last-child {
   margin-bottom: 5vh;
 }
-@media screen and (max-width: 1180px){
-  .container-alumni{
+@media screen and (max-width: 1180px) {
+  .container-alumni {
     row-gap: 0vh;
   }
-  .content-alumni{
+  .content-alumni {
     padding-top: 2vh;
   }
 }
