--- a/src/Components/Events/Fist/Fist.css
+++ b/src/Components/Events/Fist/Fist.css
@@ -7,6 +7,7 @@
   }
   
   .Fist-heading {
+    font-family: 'Times New Roman', Times, serif;
     color: red;
     font-size: 3rem;
     margin: 50px 0;
@@ -75,6 +76,7 @@
     background-color: #423f3f;
     width: 100%;
     height: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
   }
   
